[package]
name = "app"
version = "0.1.0"
description = "cnctd desktop app"
authors = ["Kyle Ebner"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all", "macos-private-api"] }
cpal = "0.14.1"
anyhow = "1.0.66"
hound = "3.5.0"
# lame = "0.1.3"
# ogg = "0.9.0"
tokio = { version = "1.15.0", features = ["full"] }
window-vibrancy = "0.3.1"
chrono = "0.4.19"
state = "0.5.3"
# audiopus = "0.3.0-rc.0"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }
# itertools = "0.10.5"
# ogg-opus = "0.1.2"
wav = "1.0.0"
# ffmpeg-next = "5.1.1"
# tauri-cli = "1.2.0"
embed_plist = "1.2.2"
# base64 = "0.13.1"
dotenv = "0.15.0"
pitch-detection = "0.3"
open = "3.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
